packages/typ/tests/fixtures/diagnostics/0138_adt_constructor_bool_arg_mismatch_02.ml.infer.expected
File "0138_adt_constructor_bool_arg_mismatch_02.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0138_adt_constructor_bool_arg_mismatch_02 is not a valid module name.

File "0138_adt_constructor_bool_arg_mismatch_02.ml", line 2, characters 13-14:
2 | let _ = Flag 1
                 ^
Error: The constant 1 has type int but an expression was expected of type
         bool
