packages/typ/tests/fixtures/diagnostics/0138_adt_constructor_bool_arg_mismatch_02.ml
type rec_beta = Num of int | Flag of bool
let _ = Flag 1
